This file documents the revision history for Perl application PhotoGame.

0.03  pending
        - added 'total_votes' values
        - updates to fragfest template and basic template

0.02  2011-10-20 12:00:00
        - add index (woops)
        - add fragfest template (updates to basic template)

0.01  2011-10-19 15:06:13
        - initial revision, generated by Catalyst
        - basic features created (Dean)