@@ -1,13 +1,15 @@
 [%- IF specimens -%]
-<div class="submissions">
+<div class="gallery">
    [%- FOREACH photo IN specimens -%]
    [%- IF photographer_id != photo.photographer_id -%]
       [%- SET count = 0 -%]
       [%- SET photographer_id = photo.photographer_id %]
-          <div class="submissions photographer">[% photo.full_name %]</div>
-   [%- END -%]
+          <div class="submission photographer">
+          [%- IF photo.avatar %]<img class="gravatar" src="/static/gravatars/[% photo.avatar %]" alt="[% photo.full_name %]" /><span>[% ELSE %]<span>Photos from<br />[% END -%]
+          [% photo.full_name %]</span></div>
+   [%- END %]
    [%- SET count = count + 1 %]
-          <div class="submissions photo[% count %]"><a href="/static/uploads/[% photo.file_name %]"><img src="/static/uploads/thumbs/[% photo.file_name %]" title="[% photo.orig_name %] taken by [% photo.full_name %]"/></a></div>
+          <div class="submissions photo"><a href="/static/uploads/[% photo.file_name %]"><img src="/static/uploads/thumbs/[% photo.file_name %]" title="[% photo.orig_name %] taken by [% photo.full_name %]"/></a></div>
    [%- IF count == 3 -%]
        [% SET count = 0 -%]
    [%- END -%]
