@@ -3,6 +3,7 @@ This file documents the revision history for Perl application PhotoGame.
 0.03  pending
         - added 'total_votes' values
         - updates to fragfest template and basic template
+        - added gravatar support
 
 0.02  2011-10-20 12:00:00
         - add index (woops)
